--- a/package.json
+++ b/package.json
@@ -7,21 +7,20 @@
   "main": "lib/index.js",
   "keywords": [
     "tinkerhub",
-    "tinkerhub-bridge"
+    "tinkerhub-plugin"
   ],
   "scripts": {
-    "prepublish": "node_modules/.bin/eslint lib",
     "test": "node_modules/.bin/eslint lib"
   },
-  "peerDependencies": {
-    "tinkerhub": "^1.0.0"
-  },
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "abstract-things": "^0.2.1",
+    "body-parser": "^1.18.2",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
+    "tinkerhub": "^2.3.0"
   },
   "devDependencies": {
-    "eslint": "^3.11.1",
-    "eslint-plugin-node": "^3.0.5"
+    "eslint": "^4.12.0",
+    "eslint-plugin-node": "^5.2.1"
   }
 }
